[package]
name = "smolscale2"
version = "0.4.7"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Delta4 <delta4chat@gmx.com>"]
edition = "2021"
description="hitdns fork of original smolscale"
license="ISC"
repository="https://github.com/delta4chat/smolscale"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task="4"
async-executor = "1.4.0"
once_cell= "1.5.2"
futures-lite = "1.11.3"
pin-project-lite = "0.2.1"
scopeguard= "1.1.0"
event-listener= "2.5.1"
async-io= "1.3.1"
anyhow= "1.0.37"

slab= "0.4.2"
log= "0.4.16"
# concurrent-queue="1.2.2"
num_cpus="1"
# rtrb="0.1.4"
# spin={version="0.9", default-features=false, features=["mutex", "spin_mutex"]}
backtrace="0.3"
fastrand="1"
futures-intrusive = "0.4"
# crossbeam-queue="0.3"
thread_local="1"
cache-padded="1"
crossbeam-deque = "0.8.1"
flume = "0.10.12"
# stacker="0.1"
# parking_lot = "0.11.1"
async-global-executor={version="2", features=["async-io"]}
# moka = "0.9.4"
tabwriter = "1.2.1"
st3 = "0.4"
crossbeam-queue = "0.3.6"
crossbeam-utils = "0.8.12"
waker-fn = "1.1.0"
# concurrent-queue = "2.0.0"
parking_lot = "0.12.1"
futures-util = "0.3.25"
async-channel = "1.5.1"
async-compat = "0.2.3"
scc = { version = "2.0.16", features = ["serde"] }

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = true
debug=2
# lto=true
# codegen-units=1

[dev-dependencies]
criterion = "0.3"
env_logger="0.9"
async-channel= "1.5.1"

async-oneshot= "0.4.2"

[[bench]]
name = "my_benchmark"
harness = false

[features]
# Defines a feature named `webp` that does not enable any other features.
preempt = []
