[package]
name = "smolscale2"
version = "0.4.9"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Delta4 <delta4chat@gmx.com>"]
edition = "2021"
description="hitdns fork of original smolscale"
license="ISC"
repository="https://github.com/delta4chat/smolscale"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rtrb="0.1.4"
# spin={version="0.9", default-features=false, features=["mutex", "spin_mutex"]}
# crossbeam-queue="0.3"
#thread_local="1"
#cache-padded="1"
#crossbeam-deque = "0.8.1"
#flume = "0.10.12"
# stacker="0.1"
# moka = "0.9.4"
#crossbeam-queue = "0.3.6"
#crossbeam-utils = "0.8.12"
#waker-fn = "1.1.0"
parking_lot = "0.12.1"
futures-util = "0.3.25"
async-channel = "1.5.1"
async-compat = "0.2.3"
scc = { version = "2.0.16", features = ["serde"] }
portable-atomic = "1.6.0"
concurrent-queue = { version = "2.4.0", features = ["portable-atomic"] }
fastrand = "2.0.1"
async-task = "4.7.0"
once_cell = "1.19.0"
st3 = "0.4.1"
backtrace = "0.3.69"
scopeguard = "1.2.0"
num_cpus = "1.16.0"
log = "0.4.20"
anyhow = "1.0.79"
async-io = "2.3.1"
event-listener = { version = "5.0.0", features = ["portable-atomic"] }
pin-project-lite = "0.2.13"
futures-lite = "2.2.0"
async-executor = "1.8.0"
futures-intrusive = "0.5.0"
async-global-executor = { version = "2.4.1", features = ["async-io"] }
tabwriter = "1.4.0"

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = true
debug=2
# lto=true
# codegen-units=1

[dev-dependencies]
criterion = "0.3"
env_logger="0.9"
async-channel= "1.5.1"

async-oneshot= "0.4.2"

[[bench]]
name = "my_benchmark"
harness = false

[features]
preempt = []

